# tallerDeStrings

./: CMakeLists.txt  main.cpp
src/: ejercicios.cpp  ejercicios.h
tests/: Ej1_esPalindromo.cpp  Ej2_anagramas.cpp  Ej3_substring.cpp  Ej4_split.cpp  Ej5_darVueltaPalabra.cpp  Ej6_subsecuencia.cpp  Ej7_agruparAnagramas.cpp  Ej8_reversoCada.cpp
